option('detours_source_browsing', type: 'boolean', value: false, description: 'Enable source browsing for detours')
option('detours_win_7', type: 'boolean', value: false, description: 'Enable Windows 7 support for detours')
option('detours_unittests', type: 'boolean', value: false, description: 'Enable unit tests for detours')
